--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"manifest_version": 2,
+	"manifest_version": 3,
 	"name": "Bilibili Danmu Helper",
-	"version": "0.0.1",
+	"version": "0.0.3",
 	"background": { "scripts": ["jquery-2.2.4.js", "background.js"] },
 	"page_action": {
 		"default_icon": {
@@ -12,7 +12,7 @@
 		"default_title": "Bilibili Danmu Helper",
 		"default_popup": "popup.html"
 	},
-	"permissions": ["tabs", "http://localhost/"],
+	"permissions": ["tabs", "http://localhost/", "http://*/"],
 	"content_scripts": [{
 		"all_frames": true,
 		"matches": ["http://*.bilibili.com/*"],
