--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "Bilibili Danmu Helper",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"background": { "scripts": ["jquery-2.2.4.js", "background.js"] },
 	"page_action": {
 		"default_icon": {
@@ -16,6 +16,7 @@
 	"content_scripts": [{
 		"all_frames": true,
 		"matches": ["http://*.bilibili.com/*"],
-		"js": ["loadxmldoc.js", "jquery-2.2.4.js", "content_script.js"]
+		"js": ["jquery-2.2.4.js", "highcharts.js", "loadxmldoc.js", "content_script.js"],
+		"run_at" : "document_idle"
 	}]
 }
